NetBSD Problem Report #51193

From www@NetBSD.org  Mon May 30 13:16:50 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 031F07A20D
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 30 May 2016 13:16:50 +0000 (UTC)
Message-Id: <20160530131649.2CC8B7ABD1@mollari.NetBSD.org>
Date: Mon, 30 May 2016 13:16:49 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/landisk/stand/boot/boot2.c:445]: (style) Redundant condition
X-Send-Pr-Version: www-1.0

>Number:         51193
>Category:       misc
>Synopsis:       src/sys/arch/landisk/stand/boot/boot2.c:445]: (style) Redundant condition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    misc-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon May 30 13:20:00 +0000 2016
>Closed-Date:    Tue May 31 04:17:15 +0000 2016
>Last-Modified:  Tue May 31 04:17:15 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160529
>Organization:
>Environment:
>Description:
src/sys/arch/landisk/stand/boot/boot2.c:445]: (style) Redundant condition: If 'EXPR == ' '', the comparison 'EXPR' is always true.

Source code is

    while (*options && *options == ' ')


Suggest new code

    while (*options == ' ')

Also in the same file

src/sys/arch/landisk/stand/boot/boot2.c:413]: (warning) Obsolete function 'gets' called. It is recommended to use 'fgets' or 'gets_s' instead.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51193 CVS commit: src/sys/arch/landisk/stand/boot
Date: Tue, 31 May 2016 04:05:50 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Tue May 31 04:05:50 UTC 2016

 Modified Files:
 	src/sys/arch/landisk/stand/boot: boot2.c

 Log Message:
 PR 51193 David Binderman: simplify redundant conditional.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.5 src/sys/arch/landisk/stand/boot/boot2.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 31 May 2016 04:17:15 +0000
State-Changed-Why:
fixed, thanks.

eliminating gets will be harder; as you might guess there isn't an fgets
in bootloader-land. see PR 51200...


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.