PR 51193 David Binderman: simplify redundant conditional.